changes in pagination and add topic

--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -28,7 +28,7 @@
     <div class="tabs">
         <div id="link1" class='links'>
             <p>
-                <a href="{{ url_for('albums') }}">历史记录</a>
+                <a href="{{ url_for('albums') }}">相册记录</a>
             </p>
         </div>
         <span class="clear"></span>
