--- a/web/templates/preview.html
+++ b/web/templates/preview.html
@@ -159,7 +159,7 @@
     download: <a href="{{url_for('getalbum')}}?url={{ url }}">txt</a>|<a href="{{url_for('zip')}}?url={{ url }}">zip</a>
     <button id="fullscreen" class="btn btn-default">全屏浏览 <span class="glyphicon glyphicon-fullscreen"></span></button>
     <p class="">
-        点击图片大图浏览，鼠标单击下一张双击上一张，左右方向键翻页，ESC退出。
+        点击图片进行浏览，鼠标左键下一张右键上一张，左右方向键翻页，ESC退出。
     </p>
     </p>
     <div class="grid">
