--- a/web/templates/albums.html
+++ b/web/templates/albums.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
-{% block title%}相册抓取记录{% endblock title%}
+{% block title%}{{ Banner|default('历史记录') }}{% endblock title%}
 {% block head -%}
 {{ super() }}
-    <link href="//cdn.bootcss.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
+    <link href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
     <style type="text/css">
         body{
             font-size: 13px;
@@ -25,7 +25,7 @@
             width: 144px;
             overflow: hidden;
         }
-        .pagination a{
+        .pagination>li>a{
             padding: 2px 7px;
             border: #CCCCCC 1px solid;
             margin: 0 3px;
@@ -37,9 +37,10 @@
             background: #95071B;
             border-color: #95071B;
         }
-        .pagination a:hover{
+        .pagination>li>a:hover{
             background: #95071B;
-            border-color: #95071B;  
+            border-color: #95071B;
+            color: #fff;
         }
         .pagination .disabled span{
             border: 0;
@@ -52,8 +53,9 @@
 {%- block body %}
 <div class="container">
     <div class="page-header">
-        <h1>抓取历史 <small><a href="{{url_for('index')}}"> 回首页</a></small></h1>
+        <h1>{{ Banner|default('历史记录') }} <small><a href="{{url_for('index')}}"> 回首页</a></small></h1>
     </div>
+    {% block nav %}{% endblock nav%}
     <ul class="album_list">
         {% for album in albums -%}
             <li>
@@ -73,9 +75,9 @@
                 {% if not p -%}
                     <li class="disabled"><span aria-hidden="true">...</span></a></li>
                 {%- elif p == currentpage -%}
-                    <li class="active" ><a href="{{url_for('albums')}}?page={{p}}">{{p}}<span class="sr-only">(current)</span></a></li>
+                    <li class="active" ><a href="{{url_for( func )}}?page={{p}}">{{p}}<span class="sr-only">(current)</span></a></li>
                 {%- else -%}
-                    <li><a href="{{url_for('albums')}}?page={{p}}">{{p}}</a></li>
+                    <li><a href="{{url_for( func )}}?page={{p}}">{{p}}</a></li>
                 {%- endif -%}
             {%- endfor %}
         </ul>
