--- a/web/templates/donate.html
+++ b/web/templates/donate.html
@@ -3,8 +3,8 @@
 {% block body%}
 <div>
     <p>如果你觉得此工具帮助到你了，您可以通过手机“支付宝钱包”应用扫描二维码进行捐赠；</p>
-    <img src="static/img/donate.jpg">
+    <img src="{{ url_for('static', filename='img/donate.jpg') }}">
     <p>所得的款项会保障继续在网络上运行此工具</p>
-    <p>本工具开源在<img src="/static/img/github.png"><a href="https://github.com/xavierskip/hupu_Album_Downloader">GitHub</a></p>
+    <p>本工具开源在<img src="{{ url_for('static', filename='img/github.png') }}"><a href="https://github.com/xavierskip/hupu_Album_Downloader">GitHub</a></p>
 </div>
 {% endblock body %}
