template file name change

--- a/web/templates/advance.html
+++ b/web/templates/advance.html
@@ -1,4 +1,4 @@
-{% extends "page.html" %}
+{% extends "index.html" %}
 {% block userinfo %}
     <!-- user info -->
     <div id="userinfo" class="dropdown">
