--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -1,4 +1,4 @@
-{% extends "page.html" %}
+{% extends "index.html" %}
 {% block label %}
     <label>相册URL: <input type="text" name="albumurl" size=50></label>
 {% endblock label %}
