--- a/web/templates/albums.html
+++ b/web/templates/albums.html
@@ -5,7 +5,7 @@
 <script src="//cdn.bootcss.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 {%- endblock head %}
 {% block nav %}
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default navborder">
     <div class="navbar-header">
         <button class="navbar-toggle" data-toggle="collapse" data-target="#navbar1">
             <i class="icon-bar"></i>
