--- a/web/templates/page.html
+++ b/web/templates/page.html
@@ -48,6 +48,13 @@
         .pagination .disabled span:hover{
             cursor: default;
         }
+        .navborder{
+            border-top: 1px solid #ff4411;
+        }
+        .page-header{
+            padding-bottom: 0;
+            border-bottom: 0; 
+        }
     </style>
 {%- endblock head %}
 {%- block body %}
