1.generator nav 2.add albums series

--- a/web/templates/albums.html
+++ b/web/templates/albums.html
@@ -19,6 +19,12 @@
             <li>
                 <a href="{{ url_for('sd') }}">灌篮高手</a>
             </li>
+            <li>
+                <a href="{{ url_for('mm') }}">姑娘们</a>
+            </li>
+            <li>
+                <a href="{{ url_for('mj') }}">Michael</a>
+            </li>
         </ul>
     </div>
 </nav>
