update time  remove

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -46,7 +46,7 @@
         {% block nav %}{% endblock nav %}
     </div>
     <footer>
-    如果本工具对您有帮助，希望您能够<a  class="a" href="{{ url_for('donate') }}">捐助</a>此工具| Last updated <span id="lastDate">2015-07-20</span> | <a class="a" href="mailto:xavierskip@gmail.com?Subject=BUG:" target="_blank">反馈</a>
+    如果本工具对您有帮助，希望您能够<a  class="a" href="{{ url_for('donate') }}">捐助</a>此工具 | <a class="a" href="mailto:xavierskip@gmail.com?Subject=BUG:" target="_blank">反馈</a>
     </footer>
 {% block popup %}{% endblock popup %}
 {% endblock body %}
