--- a/web/templates/preview.html
+++ b/web/templates/preview.html
@@ -156,7 +156,7 @@
 <div class="container">
     <h2><a href="{{ url }}">{{ title }}</a><small>共{{ count }}张<a href="{{url_for('albums')}}" class="glyphicon glyphicon-off" aria-hidden="true"> </a></small></h2>
     <p>
-    download: <a href="{{url_for('getalbum')}}?url={{ url }}">txt</a>|<a href="{{url_for('zip')}}?url={{ url }}">zip</a>
+    download: <a href="{{url_for('getalbum')}}?url={{ url }}">txt</a>|<a href="{{url_for('zip_mod')}}?url={{ url }}">zip</a>
     <button id="fullscreen" class="btn btn-default">全屏浏览 <span class="glyphicon glyphicon-fullscreen"></span></button>
     <p class="">
         点击图片进行浏览，鼠标左键下一张右键上一张，左右方向键翻页，ESC退出。
