--- a/web/templates/preview.html
+++ b/web/templates/preview.html
@@ -156,7 +156,7 @@
 <div class="container">
     <h2><a href="{{ url }}">{{ title }}</a><small>共{{ count }}张<a href="{{url_for('albums')}}" class="glyphicon glyphicon-off" aria-hidden="true"> </a></small></h2>
     <p>
-    download: <a href="{{url_for('getalbum')}}?url={{ url }}">txt</a>|<a href="javascript:void(0);" id="zip_a">zip</a>
+    download: <a href="{{url_for('download_album', method='txt')}}?url={{ url }}">txt</a>|<a href="javascript:void(0);" id="zip_a">zip</a>
     <button id="fullscreen" class="btn btn-default">全屏浏览 <span class="glyphicon glyphicon-fullscreen"></span></button>
     <p class="">
         点击图片进行浏览，鼠标左键下一张右键上一张，左右方向键翻页，ESC退出。
@@ -341,7 +341,7 @@
             view(imgid);
     })
     // for open zip url
-    var zip_url = "{{url_for('zip_mod')}}?url={{ url }}";
+    var zip_url = "{{url_for('download_album', method='zip')}}?url={{ url }}";
     var openurl = function(url){
         var windowHandle = window.open(); windowHandle.location.href = url;
     }
